# Win64-httpdLite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  httpd.conf  run_server.bat  run_tests.bat  test_concurrency.py  test_html.py  test_methods.py  test_recursive.py  test_resources.py
.github/workflows/: release.yml
html/: index.html
html/subdir/: sub.html
src/: cache.asm  handler.asm  http.asm  main.asm  memory.asm  network.asm  utils.asm
src/include/: constants.inc  macros.inc  network.inc  system.inc
